<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewBig"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>