<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="gifModelDataItem"
            type="com.example.gifgallery.data.models.GifModelDataItem" />

        <variable
            name="viewModel"
            type="com.example.gifgallery.ui.gifview.GifGalleryViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center"
        android:onClick="@{() -> viewModel.onItemClick(gifModelDataItem)}">

        <ImageView
            android:id="@+id/gifItemImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            app:imageUrl="@{gifModelDataItem.images.fixedWithSmall.url}"/>

    </RelativeLayout>

</layout>